--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -65,15 +65,21 @@
     --ring: 212.7 26.8% 83.9%;
   }
   .transition-max-height {
-    transition: max-height 0.5s ease, opacity 0.5s ease;
+    transition:
+      max-height 0.5s ease,
+      opacity 0.5s ease;
     max-height: 0;
     opacity: 0;
     overflow: hidden;
   }
 
   .transition-max-height.show {
-    max-height: 100px; /* or an appropriate value based on your input height */
+    max-height: 100px;
     opacity: 1;
+  }
+
+  [vaul-drawer][vaul-drawer-direction="bottom"]:after {
+    z-index: -1;
   }
 }
 
