--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -77,6 +77,16 @@
     max-height: 100px;
     opacity: 1;
   }
+
+  .scrollbar-hide::-webkit-scrollbar {
+    display: none;
+  }
+
+  /* For IE, Edge and Firefox */
+  .scrollbar-hide {
+    -ms-overflow-style: none; /* IE and Edge */
+    scrollbar-width: none; /* Firefox */
+  }
 }
 
 @layer base {
